crates/rooch-framework-tests/tests/cases/private_generics/mismatches_function_definition.exp
processed 2 tasks

task 1 'publish'. lines 3-7:
Error: error: type name "T2" not defined in function "create_box"
  ┌─ /tmp/tempfile:6:5
  │
6 │     public fun create_box<T1>() {}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


